--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta name="google-site-verification" content="...">
+<meta name="google-site-verification" content="Dg5uLTdSBjJZOUQd3Ac1GRKnaefmHwBgjXEdz6TAmp8" />
